--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,60 +1,20 @@
-html,
+*
+    box-sizing: border-box
 body
     padding: 0
     margin: 0
-    min-height: 100vh
+    .root
+        min-height: 100vh
+        display: flex
+        flex-direction: column
+
 a
     color: inherit
     text-decoration: none
 
-*
-    box-sizing: border-box
-
-body
-    display: flex
-    flex-direction: column
-    align-items: center
-
-header
-    background-color: oladlace
-    height: 80px
-    display: flex
-    justify-content: space-between
-    align-items: center
-    div
-        max-width: 1234px
-        margin: auto
-        display: flex
-        justify-content: space-between
-        align-items: center
-        width: 100%
-        padding: 0.5rem 1rem
-        ul
-            list-style-type: none
-            display: flex
-            justify-content: space-between
-            gap: 1rem
-            border-bottom: 2px solid transparent
-            :hover
-                border-bottom: 2px solid black
-
-main
-    width: 100%
-    // max-width: 1234px
-    margin: auto
-    padding: 1rem
-
-footer
-    margin-top: auto
-    width: 100%
-    background-color: #333
-    color: #fff
-    text-align: center
-    padding: 1rem
-
 .container
     margin: 0 auto
-    padding: 1rem
+    padding: 2rem
     max-width: 1234px
 
 // @media (prefers-color-scheme: dark)
